# Weatherever

./: .gitignore  .gitmodules  LICENSE  README.md
Hardware/: ICs.txt
Hardware/FutureUpgrades/: RadioComm.kicad_sch
Hardware/Giskard_rev1/GiskardRF/: ExpansionConnector.kicad_sch  GiskardRF.kicad_pcb  GiskardRF.kicad_prl  GiskardRF.kicad_pro  GiskardRF.kicad_sch  RadioComm.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/Giskard_rev1/GiskardRF/CustomFootprints.pretty/: 10132798-011100LF_AMP.kicad_mod  CONN10_10132797-011100LF_AMP.kicad_mod
Hardware/TestingBoard/AnmTestingCircuit/: AnmTestingCircuit.kicad_prl  AnmTestingCircuit.kicad_pro  AnmTestingCircuit.kicad_sch
Hardware/Weatherever_board_rev1/: CustomSymbols.bak  CustomSymbols.kicad_sym  IsolatedFreqCnt.kicad_sch  OnBoardThermometer.kicad_sch  PoweSupply.kicad_sch  RadioComm.kicad_sch  USB_Dongle.kicad_sch  Weatherever_board_rev1.csv  Weatherever_board_rev1.kicad_pcb  Weatherever_board_rev1.kicad_prl  Weatherever_board_rev1.kicad_pro  Weatherever_board_rev1.kicad_sch  Weatherever_board_rev1.xlsx  Weatherever_board_rev1.xml  fp-info-cache  fp-lib-table
Resources/: Calculations.xlsx  ComponentCalculator.xlsx  ComponentList.md
Resources/Design/: GeneralPurpose.md  GeneralTODO.md
Resources/Design/DesignNotes/: GeneralConsiderations.md  PlannedFatures.md
Resources/Design/SystemDesign/: TaskAllocation.drawio  USBDebugInterface.drawio
Resources/Design/SystemStartup/: SystemStartupFlowchart.drawio
Resources/Design/WindSpeedMeasurement/: HWMeasurementCircuit.drawio  SWMeasurementSystem.drawio
Software/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  STM32G030C8Tx_FLASH.ld  buildscript.py  buildscript.sh
Software/.cache/clangd/index/: TestExample.c.010A1BFE5458163E.idx  TestExample_runner.c.8765B3371B11072C.idx  TestThisShouldFail.c.8AFF6C70064A9B1C.idx  TestThisShouldFail_runner.c.B8C4B7C1BEE316B1.idx  unity.c.D5C08F9CF092A51F.idx  unity.h.090F16360178CFAD.idx  unity_internals.h.8834F5982C0B2DE8.idx
Software/STM32_projectSetup/WeathereverSTM/: .mxproject  Makefile  WeathereverSTM.ioc
Software/STM32_projectSetup/WeathereverSTM/Core/Inc/: FreeRTOSConfig.h  stm32g0xx_hal_conf.h
Software/STM32_projectSetup/WeathereverSTM/Core/Src/: stm32g0xx_it.c
Software/cmake/: ARMToolchain.cmake  AddStaticLib.cmake  ConfigVariables.cmake  ProjectOptions.cmake  RegisterUTTestcase.cmake  SmallHelpers.cmake  UpdateSubmodules.cmake
Software/core/: CMakeLists.txt  SystemHooks.cpp  Tasks.cpp  Tasks.hpp  main.c  main.cpp
Software/core/Inc/: FreeRTOSConfig.h  main.h  stm32g0xx_hal_conf.h  tim.h
Software/core/Src/: dma.c  gpio.c  i2c.c  rtc.c  spi.c  stm32g0xx_hal_msp.c
Software/drv/: CMakeLists.txt  CommHandler.hpp  CortexM0Plus.cpp  CortexM0Plus.hpp  PGpio.cpp  PGpio.hpp  PI2C.cpp  PI2C.hpp  PSpi.cpp  PSpi.hpp  PUsart.cpp  PUsart.hpp
Software/include/: CMakeLists.txt  FreeRTOSConfig.h
Software/lib/cli/: Interpreter.cpp  Interpreter.hpp
Software/lib/cli/db/: InterpreterDb.cpp  InterpreterDb.hpp
Software/rtos/: CMakeLists.txt
Software/rtos/FreeRTOS/: CMakeLists.txt
Software/rtos/FreeRTOS/portable/: CMakeLists.txt
Software/setup/: CMakeLists.txt  ExportProjectVariables.py
Software/setup/STM32G070CBT6/: .mxproject  Makefile  STM32G070CBT6.ioc  STM32G070CBTx_FLASH.ld
Software/setup/STM32G070CBT6/Core/Inc/: stm32g0xx_hal_conf.h  stm32g0xx_it.h
Software/setup/STM32G070CBT6/Core/Src/: dma.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  usart.c
Software/setup/WeathereverSTM/: .mxproject  Makefile  STM32G030K8Tx_FLASH.ld  WeathereverSTM.ioc
Software/setup/WeathereverSTM/Core/Inc/: FreeRTOSConfig.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
Software/setup/WeathereverSTM/Core/Src/: app_freertos.c  dma.c  i2c.c  main.c  spi.c  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  tim.c  usart.c
Software/test/: CMakeLists.txt  HowToAddTest.md
Software/test/TestAppCore/: CMakeLists.txt  TestAppRoot.cpp
Software/test/TestDrivers/: CMakeLists.txt  TestCommHandler.cpp
Software/test/TestExample/: CMakeLists.txt  TestExample.c  TestExample.cpp  TestExample_runner.c  TestMain.cpp  TestThisShouldFail.c  TestThisShouldFail_runner.c
Software/test/mocks/: CMakeLists.txt  MockFreeRTOS.cpp  MockFreeRTOS.hpp
